--- a/app/src/main/res/layout/transport_route_trip_schedule_item_layout.xml
+++ b/app/src/main/res/layout/transport_route_trip_schedule_item_layout.xml
@@ -13,16 +13,17 @@
     android:weightSum="20">
 
     <TextView
-        android:id="@+id/routeDescription"
+        android:id="@+id/timeQueue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="13"
+        android:layout_weight="8.5"
         android:ellipsize="marquee"
         android:fontFamily="@font/lato"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:singleLine="true"
         android:text=""
+        android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="14sp" />
 
@@ -34,18 +35,33 @@
         android:background="#99121212" />
 
     <TextView
-        android:id="@+id/routePrice"
+        android:id="@+id/timeDepart"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="7"
+        android:layout_weight="8.5"
         android:ellipsize="marquee"
         android:fontFamily="@font/lato"
-        android:paddingStart="8dp"
         android:paddingTop="8dp"
-        android:paddingEnd="8dp"
         android:paddingBottom="8dp"
         android:singleLine="true"
         android:text=""
+        android:textAlignment="center"
         android:textColor="@color/textColor"
         android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="#99121212" />
+
+    <ImageButton
+        android:id="@+id/options"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:background="#00FFFFFF"
+        android:src="@drawable/ic_icon_kebab"
+        android:tint="@color/colorAccent" />
 </LinearLayout>
